@@ -22,6 +22,7 @@
 - Fix: [#18379] Tunnel entrances for underground Mini Golf Hole E are not rendered correctly.
 - Fix: [#18442] About window background is clickable.
 - Fix: [#18449] [Plugin] Change type of listview widgets from 'scroll_view' to 'listview'.
+- Fix: [#18453] Slow walking guests don't get across level crossings in time.
 
 0.4.2 (2022-10-05)
 ------------------------------------------------------------------------
